# jansevakernel

./: README.md  pyproject.toml
example/: example.ipynb
jansevakernel/: kernel.json
src/jansevakernel/: __main__.py  install_kernelspec.py  kernel.py
